--- a/style.css
+++ b/style.css
@@ -45,9 +45,23 @@ p{
 }
 
 h2{
+    color: white;
     font-size: 64px;
     font-weight: 700;
     line-height: 100.03px;
+}
+
+input::placeholder{
+    color: #A3A1A1;
+}
+
+textarea::placeholder{
+    color: #A3A1A1;
+
+}
+
+select{
+    color: #A3A1A1;
 }
 
 /* конец общих стилевых решений */
@@ -250,4 +264,116 @@ nav button{
 .Journeys img{
     height: 443px;
     width: 525px;
+}
+
+
+
+
+
+.question{
+    height: 835px;
+    background: #222222;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.question > div{
+    display: flex;
+    justify-content: space-around;
+}
+
+.question form{
+    display: flex;
+    flex-direction: column;
+    gap: 31px;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 50.02px;
+    text-align: left;
+}
+
+.question form input{
+    width: 666px;
+    height: 67px;
+    border-radius: 12px;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 50.02px;
+    text-align: left;
+    text-indent: 5px;
+    background: #D9D9D9;
+}
+
+.question form select{
+    width: 666px;
+    height: 67px;
+    border-radius: 12px;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 50.02px;
+    text-align: left;
+    background: #D9D9D9;
+}
+
+.question form textarea{
+    width: 666px;
+    height: 199px;
+    border-radius: 12px;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 50.02px;
+    text-align: left;
+    text-indent: 5px;
+    background: #D9D9D9;
+}
+
+.question h2{
+    text-align: center;
+}
+
+.question .img{
+    width: 653px;
+    height: 502px;
+    border-radius: 76px;
+    background-image: url(./assets/img/image6.png);
+    position: relative;
+    z-index: 2;
+}
+
+.question .img img{
+    position: absolute;
+}
+
+.question .img .upperRight{
+    transform: translate(75%, -25%);
+}
+
+.question .img .lowerLeft{
+    transform: translate(-20%, 70%);
+}
+
+
+
+
+
+
+footer{
+    position: relative;
+    background: #222222;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 235px;
+}
+
+footer > img{
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+footer p{
+    text-align: center;
+    color: white;
 }
