--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@
     font-family: 'El Messiri';
 }
 
+a{
+    text-decoration: none;
+    color: black;
+}
+
 button{
     border: none;
     border-radius: 12px;
@@ -33,9 +38,16 @@ button:active
     box-shadow: inset 1px 1px 20px -1px
 }
 
+button a{
+    text-align: center;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+}
+
 .block
 {
-    margin-bottom: 16px;    
+    margin-top: 16px;    
 }
 
 p{
@@ -71,13 +83,22 @@ select{
 header
 {
     position: relative;
-    background-color: black;
-    display: flex;
-    justify-content: center;
-    height: 235px;
+    background-image: url(./assets/img/image1.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    /* filter: brightness(0.5); */
+    height: 831px;
 }
 
-header > img
+header > div:first-child{
+    height: 235px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header > div:first-child > a
 {
     position: absolute;
     top: 0;
@@ -86,43 +107,40 @@ header > img
 
 header .butons
 {
+    height: 120px;
     display: flex;
     flex-wrap: wrap;
     width: 712px;
     justify-content: space-between;
-    gap: 19px;
+    align-items: center;
+    gap: 10px;
 }
 
 header button
 {
-    width: 288px;
+    width: 350px;
     height: 52px;
 }
 
-header button:last-child
+header button:first-child
 {
     max-width: 712px;
     width: 100%;
 }
 
-header p
-{
-    font-size: 64px;
-    font-weight: 700;
-    line-height: 100.03px;
-    text-align: left;
-    color: white;
-}
 
-/* конец хедера */
 
 .divNav{
     height: 567px;
-    background-image: url(./assets/img/image1.png);
     display: flex;
     align-items: center;
     justify-content: space-around;
     align-items: center;
+}
+
+.divNav p{
+    color: white;
+    margin-top: 20px;
 }
 
 .divNav > div{
@@ -159,7 +177,12 @@ nav button{
     width: 481px;
     height: 67px;
     line-height: 62.52px;
+    padding-top: 5px;
 }
+
+/* конец хедера */
+
+
 
 
 
@@ -195,43 +218,41 @@ nav button{
     height: 736px;
     display: flex;
     flex-direction: column;
-    gap: 49px;
+    gap: 30px;
     background: #222222;
+    justify-content: start;
+    align-items: center;
 }
 
 .ourCalculations h2{
     text-align: center;
     color: white;
+    margin-top: 20px;
 }
 
 .ourCalculations > div{
-    display: flex;
-    justify-content: space-around;
-}
-
-.ourCalculations > div > div{
-    width: 748px;
+    width: 1289px;
     height: 526px;
     border-radius: 42px;
     background: #D9D9D9;
+
+}
+
+.ourCalculations div {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.ourCalculations > div > div p{
+.ourCalculations div p{
+    width: 1062px;
     font-size: 36px;
+    font-weight: 700;
     line-height: 56.27px;
     text-align: center;
 }
 
-.ourCalculations > div > div:nth-child(1) p{
-    width: 696px;
-}
 
-.ourCalculations > div > div:nth-child(2) p{
-    width: 674px;
-}
 
 
 
@@ -359,12 +380,17 @@ nav button{
 
 
 footer{
+    margin-top: 16px;
     position: relative;
     background: #222222;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    height: 235px;
+}
+
+.footer{
+    display: flex;
+    align-items: center;
 }
 
 footer > img{
@@ -373,7 +399,18 @@ footer > img{
     left: 0;
 }
 
-footer p{
+footer p, footer p > a{
     text-align: center;
     color: white;
+}
+
+footer button{
+    width: 377px;
+    height: 57px;
+    border-radius: 12px;
+    background-color: #D9D9D9;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 62.52px;
+    margin-right: 79px;
 }
