--- a/thirstPage/style.css
+++ b/thirstPage/style.css
@@ -12,32 +12,22 @@
     font-family: 'El Messiri';
 }
 
-main{
-    background: #222222;
-    display: grid;
-    gap: 50px;
-    margin-bottom: 8px;
-    padding-bottom: 85px;
-}
-
-main > div{
-    display: flex;
-    justify-content: center;
-}
-
-main > img{
-    display: inline-block;
-}
-
 a{
     text-decoration: none;
     color: black;
 }
 
+main{
+    background-color: rgba(34, 34, 34, 1);
+    margin-bottom: 8px;
+    padding-bottom: 25px;
+}
+
 p{
-    font-size: 36px;
-    font-weight: 400;
-    line-height: 56.27px;
+    font-size: 35px;
+    font-weight: 700;
+    line-height: 54.71px;
+    text-align: left;
     color: white;
 }
 
@@ -52,6 +42,13 @@ button{
     justify-content: center;
 }
 
+button a{
+    text-align: center;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+}
+
 button:hover
 {
     box-shadow: inset 1px 1px 8px -1px
@@ -62,16 +59,6 @@ button:active
     box-shadow: inset 1px 1px 20px -1px
 }
 
-h2{
-    color: white;
-    font-size: 64px;
-    font-weight: 700;
-    line-height: 100.03px;
-    text-align: center;
-    padding-top: 117px;
-    padding-bottom: 20px;
-    margin-bottom: -50px;
-}
 
 /* конец общих стилевых решений */
 
@@ -81,7 +68,7 @@ h2{
 header
 {
     position: relative;
-    background: #222222;
+    background: rgba(34, 34, 34, 1);
     display: flex;
     justify-content: center;
     height: 235px;
@@ -128,90 +115,126 @@ header p
 
 
 
-.egypt{
-    display: grid;
-    gap: 72px;
+
+.My > h2{
+    font-size: 64px;
+    font-weight: 700;
+    line-height: 100.03px;
+    text-align: center;
+    color: white;
+    padding-top: 70px;
+    margin-bottom: 20px;
 }
 
-.egypt .text{
+.My div{
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
 
-.egypt .text > p{
-    text-align: left;
-    width: 836px;
+.My p{
+    width: 875px;
 }
 
-.egypt .picture > p{
+
+
+
+
+
+
+
+.blockdiv1{
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 37.51px;
+    text-align: center;    
+}
+
+.rezume h2{
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 75.02px;
     text-align: center;
+    color: white;
+    margin-top: 48px;
+    margin-bottom: 72px;
 }
 
-.egypt .image{
+.rezume > div{
     display: flex;
     justify-content: space-around;
-    text-align: center;
 }
 
-
-
-
-.greece{
+.picture{
     display: grid;
-    gap: 72px;
+    gap: 25px;
 }
 
-.greece .text{
+.forma{
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
 }
 
-.greece .text > p{
-    text-align: left;
-    width: 737px;
-}
-
-.greece .picture > p{
-    text-align: center;
-}
-
-.greece .image{
+form{
     display: flex;
-    justify-content: space-around;
-    text-align: center;
-}
-
-
-
-
-
-.paris{
-    display: grid;
-    gap: 72px;
-}
-
-.paris .text{
-    display: flex;
-    justify-content: space-around;
+    flex-direction: column;
     align-items: center;
 }
 
-.paris .text > p{
-    text-align: left;
-    width: 914px;
+button[type="submit"]{
+    cursor: pointer;
 }
 
-.paris .picture > p{
-    text-align: center;
+input[type="file"]{
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
 }
 
-.paris .image{
+input + label{
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 50.02px;
+    width: 705px;
+    height: 41px;
+    color: #A3A1A1;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    padding: 29px 0;
+    padding-left: 19px;
+    border-radius: 12px;
+    background-color: #D9D9D9;
+    margin-bottom: 38px;
+}
+
+form button{
+    width: 395px;
+    height: 67px;
+    border-radius: 12px;
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 75.02px;
+    padding-top: 10px;
+    margin-bottom: 48px;
+}
+
+.blockdiv2{
+    font-size: 35px;
+    font-weight: 700;
+    line-height: 54.71px;
     text-align: center;
 }
+
+
+
+
 
 
 
