--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ button{
     display: inline-flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 
 button:hover
@@ -87,18 +88,24 @@ header
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    /* filter: brightness(0.5); */
     height: 831px;
 }
 
-header > div:first-child{
+/* чтобы сделать картину затемноной */
+header > div{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Черный цвет с прозрачностью 0.5 */
+  }
+
+header > div > div:first-child{
     height: 235px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-header > div:first-child > a
+header > div > div:first-child > a
 {
     position: absolute;
     top: 0;
@@ -138,7 +145,7 @@ header button:first-child
     align-items: center;
 }
 
-.divNav p{
+.divNav div p{
     color: white;
     margin-top: 20px;
 }
@@ -161,7 +168,6 @@ nav{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     gap: 10px;
 }
 
@@ -169,7 +175,7 @@ nav p{
     font-size: 40px;
     line-height: 62.52px;
     text-align: center;
-    margin-bottom: 10px;
+    margin-top: 20px;
     color: #FFFFFF;
 }
 
@@ -326,6 +332,11 @@ nav button{
     background: #D9D9D9;
 }
 
+.custom-select{
+    position: relative;
+    display: inline-block;
+}
+
 .question form select{
     width: 666px;
     height: 67px;
@@ -335,7 +346,25 @@ nav button{
     line-height: 50.02px;
     text-align: left;
     background: #D9D9D9;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    padding-right: 45px;
 }
+
+.custom-select img{
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translate(-30%, -40%);
+    pointer-events: none;
+}
+
+
+/* border-left: 6px solid transparent;
+border-right: 6px solid transparent;
+border-top: 6px solid #555; */
+
 
 .question form textarea{
     width: 666px;
