--- a/secondPage/style.css
+++ b/secondPage/style.css
@@ -29,16 +29,17 @@ main > img{
     display: inline-block;
 }
 
-a{
-    text-decoration: none;
-    color: black;
-}
 
 p{
     font-size: 36px;
     font-weight: 400;
     line-height: 56.27px;
     color: white;
+}
+
+a{
+    text-decoration: none;
+    color: black;
 }
 
 button{
@@ -50,6 +51,7 @@ button{
     display: inline-flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 
 button:hover
@@ -60,6 +62,13 @@ button:hover
 button:active
 {
     box-shadow: inset 1px 1px 20px -1px
+}
+
+button a{
+    text-align: center;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
 }
 
 h2{
@@ -166,12 +175,13 @@ header p
 
 .greece .text{
     display: flex;
+    flex-direction: row-reverse;
     justify-content: space-around;
     align-items: center;
 }
 
 .greece .text > p{
-    text-align: left;
+    text-align: right;
     width: 737px;
 }
 
