--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@
     font-family: 'El Messiri';
 }
 
+main > div{
+    display: none;
+}
+
 a{
     text-decoration: none;
     color: black;
@@ -92,13 +96,14 @@ header
 
 /* чтобы сделать картину затемноной */
 header > div{
+    position: absolute;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5); /* Черный цвет с прозрачностью 0.5 */
-  }
+}
 
 header > div > div:first-child{
-    height: 235px;
+    height: 29%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -134,14 +139,11 @@ header button:first-child
     width: 100%;
 }
 
-
-
 .divNav{
-    height: 567px;
+    height: 70%;
     display: flex;
     align-items: center;
     justify-content: space-around;
-    align-items: center;
 }
 
 .divNav div p{
@@ -149,10 +151,11 @@ header button:first-child
     margin-top: 20px;
 }
 
-.divNav > div{
+.divNav > div:first-child{
     width: 902px;
     margin-bottom: 75px;
 }
+
 
 .divNav h2{
     font-weight: 600;
@@ -215,6 +218,7 @@ nav button{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: row-reverse;
 }
 
 
@@ -441,4 +445,253 @@ footer button{
     font-weight: 700;
     line-height: 62.52px;
     margin-right: 79px;
+}
+
+
+
+@media (max-width: 480px) {
+    *{
+        /* width: 100%; */
+    }
+    .logo img{
+        width: 79px;
+        height: 66px;
+    }
+    .block{
+        margin-top: 12px;
+    }
+    h2{
+        font-size: 14px;
+        font-weight: 600;
+        line-height: 21.88px;
+        text-align: left;
+    }
+    p{
+        font-size: 8px;
+        font-weight: 700;
+        line-height: 12.5px;
+        text-align: left;
+    }
+    .divNav{
+        width: 100%;
+        margin-top: 0;
+        display: inline-block;
+    }
+    .divNav > div p{
+        margin: 0;
+    }
+    header{
+        width: 100%;
+        height: 150px;
+    }
+
+    header .butons{
+        display: none;
+    }
+
+    header .logo{
+        position: absolute;
+        right: 0;
+    }
+
+    header .logo img{
+        position: absolute;
+        right: 0;
+    }
+    .nav{
+        background: #222222;
+        height: 145%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 16px;
+    }
+    nav{
+        width: 225px;
+        height: 122px;
+        justify-content: center;
+        gap: 6px;
+    }
+    .divNav > div:first-child{
+        margin-left: 10px;
+        margin-bottom: 25px;
+    }
+    nav button{
+        width: 144px;
+        height: 17px;
+        padding-top: 2px;
+    }
+    nav p{
+        font-size: 8px;
+        font-weight: 700;
+        line-height: 12.5px;
+        margin-top: 0;
+    }
+    nav a{
+        font-size: 8px;
+        font-weight: 700;
+        line-height: 12.5px;
+    }
+
+
+
+    main{
+        width: 100%;
+    }
+    .block{
+        width: 100%;
+    }
+    .timeMachine{
+        padding: 3% 0 5% 0;
+        margin-top: 50%;
+        height: auto;
+        gap: 5px;
+    }
+    .timeMachine div{
+        width: 90%;
+        flex-direction: column;
+        gap: 5px;
+    }
+    .timeMachine div p{
+        width: 95%;
+        font-size: 10px;
+        text-align: center;
+        padding: 0 9% 0 9%;
+        line-height: 15.63px;
+    }
+    .timeMachine img{
+        width: 229px;
+        height: 147px;
+    }
+
+    .ourCalculations{
+        height: auto;
+        gap: 10px;
+        padding: 10px 0 5% 0;
+    }
+    .ourCalculations h2{
+        margin-top: 0;
+    }
+    .ourCalculations  div{
+        width: 100%;
+        height: 25%;
+        border-radius: 20px;
+    }
+    .ourCalculations div p{
+        font-size: 10px;
+        font-weight: 700;
+        line-height: 15.63px;
+        text-align: center;
+    }
+
+
+
+    .Journeys{
+        height: auto;
+        width: 100%;
+        padding: 10px 0 10px 0;
+        gap: 15px;
+    }
+    .Journeys > div{
+        flex-wrap: wrap;
+        align-items: center;
+        gap: 15px;
+    }
+    .Journeys > div div:nth-child(3) img{
+        width: 284px;
+        height: 80px;
+        object-fit: cover;
+        border-radius: 22px;
+    }
+    .Journeys img{
+        height: 114px;
+        width: auto;
+    }
+    .Journeys p{
+        font-size: 10px;
+        font-weight: 400;
+        line-height: 15.63px;
+        text-align: center;
+    }
+
+
+
+    .question{
+        /* width: 100%; */
+        height: auto;
+        padding: 15px 0 20px 0;
+    }
+    .question form{
+        gap: 5px;
+        font-size: 10px;
+        font-weight: 700;
+        line-height: 15.63px;
+        text-align: left;
+        justify-content: center;
+        align-items: center;
+        margin-top: 5px;
+    }
+    .question form input{
+        width: 80%;
+        height: 31px;
+        font-size: 10px;
+        font-weight: 700;
+        line-height: 15.63px;
+        text-align: left;
+        border: none;
+    }
+    .question form select{
+        padding: 0;
+        width: 80%;
+        height: 31px;
+        font-size: 10px;
+        font-weight: 700;
+        line-height: 15.63px;
+        text-align: left;
+        border: none;
+    }
+    .question form textarea{
+        width: 80%;
+        height: 91px;
+        font-size: 10px;
+        font-weight: 700;
+        line-height: 15.63px;
+        text-align: left;
+        border: none;
+    }
+    .question .img{
+        display: none;
+    }
+    .custom-select img{
+        display: none;
+    }
+    form .custom-select{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    form button{
+        display: none;
+    }
+
+
+
+
+
+    footer{
+        height: auto;
+    }
+    footer div{
+        width: 80%;
+        justify-content: space-evenly;
+    }
+    footer button{
+        width: 98px;
+        height: 19px;
+        font-size: 10px;
+        font-weight: 700;
+        line-height: 15.63px;
+        text-align: left;
+        margin-right: 10px;
+    }
 }
