--- a/style.css
+++ b/style.css
@@ -450,8 +450,8 @@ footer button{
 
 
 @media (max-width: 480px) {
-    *{
-        /* width: 100%; */
+    html{
+        max-width: 480px;
     }
     .logo img{
         width: 79px;
@@ -513,6 +513,7 @@ footer button{
         gap: 6px;
     }
     .divNav > div:first-child{
+        width: 100%;
         margin-left: 10px;
         margin-bottom: 25px;
     }
@@ -543,7 +544,7 @@ footer button{
     }
     .timeMachine{
         padding: 3% 0 5% 0;
-        margin-top: 50%;
+        margin-top: 35%;
         height: auto;
         gap: 5px;
     }
@@ -556,7 +557,7 @@ footer button{
         width: 95%;
         font-size: 10px;
         text-align: center;
-        padding: 0 9% 0 9%;
+        /* padding: 0 9% 0 9%; */
         line-height: 15.63px;
     }
     .timeMachine img{
