--- a/style.css
+++ b/style.css
@@ -450,8 +450,8 @@ footer button{
 
 
 @media (max-width: 480px) {
-    html{
-        max-width: 480px;
+    body{
+        background-color:rgba(217, 217, 217, 1);
     }
     .logo img{
         width: 79px;
@@ -513,7 +513,7 @@ footer button{
         gap: 6px;
     }
     .divNav > div:first-child{
-        width: 100%;
+        width: 90%;
         margin-left: 10px;
         margin-bottom: 25px;
     }
@@ -544,7 +544,7 @@ footer button{
     }
     .timeMachine{
         padding: 3% 0 5% 0;
-        margin-top: 40%;
+        margin-top: 165px;
         height: auto;
         gap: 5px;
     }
@@ -691,7 +691,7 @@ footer button{
         height: 19px;
         font-size: 10px;
         font-weight: 700;
-        line-height: 15.63px;
+        line-height: 20px;
         text-align: left;
         margin-right: 10px;
     }
