--- a/style.css
+++ b/style.css
@@ -101,7 +101,9 @@ header > div{
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5); /* Черный цвет с прозрачностью 0.5 */
 }
-
+.burger_menu{
+    display: none;
+}
 header > div > div:first-child{
     height: 29%;
     display: flex;
@@ -484,7 +486,18 @@ footer button{
         width: 100%;
         height: 150px;
     }
-
+    .burger_menu{
+        position: absolute;
+        top: 10px;
+        left: 14px;
+        display: grid;
+        gap: 2px;
+    }
+    .burger_menu > div{
+        width: 21px;
+        height: 5px;
+        background: rgba(217, 217, 217, 1);
+    }
     header .butons{
         display: none;
     }
@@ -583,6 +596,7 @@ footer button{
         font-weight: 700;
         line-height: 15.63px;
         text-align: center;
+        padding: 5% 5% 5% 5%;
     }
 
 
@@ -672,7 +686,12 @@ footer button{
         align-items: center;
     }
     form button{
-        display: none;
+        margin-top: 10px;
+        width: 30%;
+        font-size: 10px;
+        font-weight: 700;
+        line-height: 20px;
+        text-align: center;
     }
 
 
