--- a/thirstPage/style.css
+++ b/thirstPage/style.css
@@ -131,6 +131,7 @@ header p
     display: flex;
     justify-content: space-around;
     align-items: center;
+    flex-direction: row-reverse;
 }
 
 .My p{
@@ -274,4 +275,145 @@ footer button{
     font-weight: 700;
     line-height: 62.52px;
     margin-right: 79px;
+}
+
+
+
+@media (max-width: 480px) {
+    body{
+        background: rgba(217, 217, 217, 1);
+    }
+    .logo{
+        width: 79px;
+        height: 66px;
+    }
+    .logo img{
+        width: 100%;
+        height: 100%;
+    }
+    header{
+        width: 100%;
+        height: auto;
+    }
+    header .logo{
+        left: auto;
+        right: 0;
+    }
+    .burger_menu{
+        position: absolute;
+        top: 17px;
+        left: 14px;
+        display: grid;
+        gap: 3px;
+    }
+    .burger_menu > div{
+        width: 33px;
+        height: 6px;
+        background: rgba(217, 217, 217, 1);
+    }
+    .header{
+        display: none;
+    }
+
+    .My h2{
+        font-size: 15px;
+        font-weight: 700;
+        line-height: 23.45px;
+    }
+    .My div{
+        flex-direction: column;
+    }
+    .My img{
+        width: 227px;
+        height: 219px;
+        object-fit: cover;
+        border-radius: 32px;
+    }
+    .My p{
+        margin-top: 20px;
+        width: 70%;
+        font-size: 10px;
+        font-weight: 700;
+        line-height: 15.63px;
+        text-align: center;
+    }
+
+
+    .rezume h2{
+        font-size: 13px;
+        font-weight: 700;
+        line-height: 20.32px;
+        margin: 30px 0 35px 0;
+    }
+
+    .rezume img{
+        width: 207px;
+        height: 211px;
+    }
+    .rezume form label{
+        width: 262px;
+        height: 45px;
+        font-size: 13px;
+        font-weight: 700;
+        line-height: 20.32px;
+        padding: 0 0 0 10px;
+        margin-bottom: 15px;
+    }
+    .rezume form label img{
+        width: 33px;
+        height: 29px;
+    }
+    .rezume .blockdiv2{
+        display: none;
+    }
+    form button{
+        width: 146px;
+        height: 30px;
+        font-size: 15px;
+        font-weight: 700;
+        line-height: 23.45px;
+        padding-top: 3px;
+        margin-bottom: 20px;
+    }
+    .rezume > div{
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+    .blockdiv1{
+        font-size: 10px;
+        font-weight: 700;
+        line-height: 15.63px;
+        text-align: center;
+    }
+    .picture{
+        text-align: center;
+        display: block;
+    }
+
+
+
+
+
+    footer{
+        padding: 10px 0 10px 0;
+    }
+    footer p{
+        font-size: 10px;
+        font-weight: 700;
+        line-height: 15.63px;
+        text-align: center;
+    }
+    footer div{
+        width: 80%;
+        justify-content: space-evenly;
+    }
+    footer button{
+        width: 98px;
+        height: 19px;
+        font-size: 10px;
+        font-weight: 700;
+        line-height: 20px;
+        text-align: left;
+        margin-right: 10px;
+    }
 }
