--- a/style.css
+++ b/style.css
@@ -12,6 +12,18 @@
     font-family: 'El Messiri';
 }
 
+.overlay{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    transition: background-color 3s;
+    z-index: 5;
+    display: none;
+}
+
 main > div{
     display: none;
 }
@@ -193,7 +205,66 @@ nav button{
 /* конец хедера */
 
 
-
+.osnova{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-124%);
+    width: 60%;
+    height: 30%;
+    min-width: 210px;
+    background: rgba(34, 34, 34, 1);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    display: none;
+    z-index: 6;
+}
+.osnova p{
+    text-align: center;
+}
+.osnova p a{
+    color: white;
+}
+.osnova button{
+    width: 185px;
+    height: 17px;
+}
+.osnova button a{
+    font-size: 10px;
+    font-weight: 700;
+    line-height: 15.63px;
+}
+.osnova > div{
+    position: relative;
+    height: 40px;
+    width: 100%;
+}
+.osnova .butons1{
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+}
+.osnova > div > a{
+    position: absolute;
+    width: 79px;
+    height: 66px;
+}
+.osnova > div > img{
+    position: absolute;
+    right: 5%;
+    top: 12px;
+}
+.osnova > a img{
+    width: 100%;
+    height: 100%;
+    /* display: inline-block; */
+}
 
 
 .timeMachine{
@@ -451,13 +522,17 @@ footer button{
 
 
 
-@media (max-width: 480px) {
+@media (min-width: 320px) and (max-width: 992px){
     body{
         background-color:rgba(217, 217, 217, 1);
     }
-    .logo img{
+    .logo{
         width: 79px;
         height: 66px;
+    }
+    .logo img{
+        width: 100%;
+        height: auto;
     }
     .block{
         margin-top: 12px;
@@ -501,14 +576,8 @@ footer button{
     header .butons{
         display: none;
     }
-
-    header .logo{
-        position: absolute;
-        right: 0;
-    }
-
-    header .logo img{
-        position: absolute;
+    header > div > div:first-child > a{
+        left: auto;
         right: 0;
     }
     .nav{
@@ -520,18 +589,21 @@ footer button{
         margin-bottom: 16px;
     }
     nav{
-        width: 225px;
-        height: 122px;
+        width: 70%;
+        max-width: 400px;
+        height: 130px;
         justify-content: center;
         gap: 6px;
     }
     .divNav > div:first-child{
         width: 90%;
-        margin-left: 10px;
-        margin-bottom: 25px;
+        margin-left: 3%;
+        margin-bottom: 11px;
+        margin-top: 14px;
     }
     nav button{
-        width: 144px;
+        width: 64%;
+        max-width: 200px;
         height: 17px;
         padding-top: 2px;
     }
@@ -606,14 +678,20 @@ footer button{
         width: 100%;
         padding: 10px 0 10px 0;
         gap: 15px;
+        align-items: center;
     }
     .Journeys > div{
+        width: 100%;
         flex-wrap: wrap;
         align-items: center;
         gap: 15px;
+        justify-content: space-around;
+    }
+    .Journeys > div > div:nth-child(3){
+        width: 85%;
     }
     .Journeys > div div:nth-child(3) img{
-        width: 284px;
+        width: 100%;
         height: 80px;
         object-fit: cover;
         border-radius: 22px;
@@ -715,3 +793,211 @@ footer button{
         margin-right: 10px;
     }
 }
+
+@media (min-width: 400px) and (max-width: 992px) {
+    .Journeys > div{
+        width: 80%;
+        justify-content: space-between;
+    }
+    .Journeys > div > div:nth-child(3){
+        width: 100%;
+    }
+}
+
+@media (min-width: 588px) and (max-width: 992px){
+    .Journeys > div > div:nth-child(3){
+        width: auto;
+    }
+    .Journeys > div div:nth-child(3) img{
+        height: 114px;
+    }
+}
+
+@media (min-width: 768px) and (max-width:992px){
+    h2{
+        font-size: 24px;
+        font-weight: 600;
+        line-height: 37.51px;
+        margin: 10px 0 15px 0;
+    }
+    p{
+        font-size: 13px;
+        font-weight: 700;
+        line-height: 20.32px;
+    }
+    .logo{
+        width: 166px;
+        height: 139px;
+    }
+    header{
+        height: 361px;
+    }
+    header h2{
+        margin: 0 0 10px 0;
+    }
+    header > div{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    header > div > div:first-child{
+        height: 20%;
+    }
+    .burger_menu{
+        top: 10%;
+        left: 4%;
+    }
+    .burger_menu div{
+        width: 43px;
+        height: 9px;
+    }
+    .divNav{
+        height: auto;
+        display: flex;
+        align-items: normal;
+        justify-content: space-around;
+    }
+    .divNav div:first-child{
+        width: 50%;
+        margin: 0;
+    }
+    .nav{
+        background-color: unset;
+        height: auto;
+        margin: 0;
+    }
+    nav{
+        width: 266px;
+        height: 181px;
+    }
+    nav p{
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 21.88px;
+    }
+    nav button{
+        width: 170px;
+        height: 25px;
+        padding-top: 3px;
+    }
+    nav a{
+        font-size: 13px;
+        font-weight: 700;
+        line-height: 20.32px;
+    }
+    header br{
+        display: none;
+    }
+
+    .timeMachine{
+        margin-top: 0;
+    }
+    .timeMachine div{
+        flex-direction: row-reverse;
+        align-items: flex-start;
+    }
+    .timeMachine div img{
+        width: 92%;
+        height: auto;
+    }
+    .timeMachine div p{
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 21.88px;
+        text-align: left;
+    }
+    .timeMachine div h2{
+        font-weight: 700;
+    }
+
+    .ourCalculations{
+        padding-top: 5%;
+    }
+    .ourCalculations div{
+        width: 70%;
+    }
+    .ourCalculations div p{
+        padding: 5% 10% 5% 10%;
+        width: auto;
+        font-size: 15px;
+        font-weight: 700;
+        line-height: 23.45px;
+    }
+
+
+
+    .Journeys{
+        padding: 4% 0 3% 0;
+    }
+    .Journeys > div div:nth-child(3) img{
+        width: 100%;
+        height: auto;
+    }
+    .Journeys div div{
+        width: 25%;
+    }
+    .Journeys > div > div:nth-child(3){
+        width: 25%;
+    }
+    .Journeys > div{
+        height: auto;
+        flex-wrap: nowrap;
+        gap: 0;
+    }
+    .Journeys p{
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 21.88px;
+        text-align: center;
+        padding: 0 20% 0 20%;
+    }
+    .Journeys img{
+        width: 100%;
+        height: auto;
+    }
+
+
+
+
+    .question{
+        padding: 4% 0 5% 0;
+    }
+    .question .img{
+        display: block;
+        width: 251px;
+        height: 221px;
+    }
+    .question .img img{
+        width: 157px;
+        height: 144px;
+    }
+    .question form input{
+        width: 70%;
+    }
+    .question form select{
+        padding: 0;
+        width: 70%;
+    }
+    .question form textarea{
+        width: 70%;
+    }
+
+
+
+    .footer{
+        width: 60%;
+        justify-content: space-between;
+    }
+    footer button{
+        width: 111px;
+        height: 28px;
+        padding: 4px 0 0 0;
+    }
+}
+
+
+/*588px*/
