--- a/thirstPage/style.css
+++ b/thirstPage/style.css
@@ -117,6 +117,84 @@ header p
 /* конец хедера */
 
 
+/* ------------------------ */
+
+.overlay{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    transition: background-color 3s;
+    z-index: 5;
+    display: none;
+}
+
+
+.osnova{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-124%);
+    width: 60%;
+    height: 30%;
+    min-width: 210px;
+    background: rgba(34, 34, 34, 1);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    display: none;
+    z-index: 6;
+}
+.osnova p{
+    text-align: center;
+}
+.osnova p a{
+    color: white;
+}
+.osnova button{
+    width: 185px;
+    height: 17px;
+}
+.osnova button a{
+    font-size: 10px;
+    font-weight: 700;
+    line-height: 15.63px;
+}
+.osnova > div{
+    position: relative;
+    height: 40px;
+    width: 100%;
+}
+.osnova .butons1{
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+}
+.osnova > div > a{
+    position: absolute;
+    width: 79px;
+    height: 66px;
+}
+.osnova > div > img{
+    position: absolute;
+    right: 5%;
+    top: 12px;
+}
+.osnova > a img{
+    width: 100%;
+    height: 100%;
+    /* display: inline-block; */
+}
+
+/*-------------------------------------*/
+
 .My > h2{
     font-size: 64px;
     font-weight: 700;
@@ -277,11 +355,167 @@ footer button{
     margin-right: 79px;
 }
 
-
-
-@media (max-width: 480px) {
+@media (max-width: 992px){
+    p{
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 21.88px;
+    }
     body{
         background: rgba(217, 217, 217, 1);
+    }
+
+    .logo{
+        width: 140px;
+        height: 134px;
+    }
+    .logo img{
+        width: 100%;
+        height: 100%;
+    }
+    header{
+        width: 100%;
+        height: auto;
+    }
+    header .logo{
+        left: auto;
+        right: 0;
+    }
+    .burger_menu{
+        position: absolute;
+        top: 33px;
+        left: 33px;
+        display: grid;
+        gap: 3px;
+    }
+    .burger_menu > div{
+        width: 72px;
+        height: 12px;
+        background: rgba(217, 217, 217, 1);
+    }
+    .header{
+        display: none;
+    }
+
+    .My h2{
+        font-size: 32px;
+        font-weight: 700;
+        line-height: 50.02px;
+        padding: 130px 0 20px 0;
+    }
+    .My div{
+        flex-direction: row-reverse;
+    }
+    .My img{
+        width: 319px;
+        height: 335px;
+        object-fit: cover;
+        border-radius: 32px;
+    }
+    .My p{
+        margin-top: 0;
+        width: 47%;
+        padding-left: 15px;
+    }
+
+
+    .rezume h2{
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 25.01px;
+        margin: 50px 0 45px 0;
+    }
+
+    .rezume img{
+        width: 227px;
+        height: 229px;
+    }
+    .rezume form label{
+        width: 317px;
+        height: 47px;
+        font-size: 13px;
+        font-weight: 700;
+        line-height: 20.32px;
+        padding: 0 0 0 10px;
+        margin-bottom: 15px;
+    }
+    .rezume form label img{
+        width: auto;
+        height: 37px;
+    }
+    .rezume .blockdiv2{
+        display: none;
+    }
+    form button{
+        width: 163px;
+        height: 44px;
+        font-size: 15px;
+        font-weight: 700;
+        line-height: 23.45px;
+        padding-top: 3px;
+        margin-bottom: 20px;
+    }
+    .rezume > div{
+        flex-direction: row;
+        align-items: center;
+    }
+    .blockdiv1{
+        font-size: 15px;
+        font-weight: 700;
+        line-height: 23.45px;
+        width: 75%;
+        text-align: center;
+    }
+    .picture{
+        text-align: center;
+        display: inline-flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+
+
+
+
+    footer{
+        padding: 10px 0 10px 0;
+    }
+    footer p{
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 25.01px;
+        text-align: center;
+    }
+    footer div{
+        width: 80%;
+        justify-content: space-evenly;
+    }
+    footer button{
+        width: 121px;
+        height: 33px;
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 21.88px;
+        text-align: center;        
+        margin-right: 10px;
+        padding: 7px 0 0 0;
+    }
+    .footer{
+        width: 60%;
+        justify-content: space-between;
+    }
+}
+
+@media (max-width: 768px) {
+    body{
+        background: rgba(217, 217, 217, 1);
+    }
+    p{
+        font-size: 10px;
+        font-weight: 700;
+        line-height: 15.63px;
+        text-align: center;
     }
     .logo{
         width: 79px;
@@ -319,6 +553,7 @@ footer button{
         font-size: 15px;
         font-weight: 700;
         line-height: 23.45px;
+        padding: 70px 0 0 0;
     }
     .My div{
         flex-direction: column;
@@ -387,11 +622,11 @@ footer button{
     }
     .picture{
         text-align: center;
-        display: block;
+        display: inline-flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
-
-
-
 
 
     footer{
@@ -415,5 +650,6 @@ footer button{
         line-height: 20px;
         text-align: left;
         margin-right: 10px;
+        padding:  0;
     }
 }
