--- a/4Page/style.css
+++ b/4Page/style.css
@@ -14,7 +14,10 @@
 
 main{
     background: #222222;
-    display: grid;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     gap: 50px;
     margin-bottom: 8px;
     padding-bottom: 85px;
@@ -70,12 +73,87 @@ h2{
     font-weight: 700;
     line-height: 100.03px;
     text-align: center;
-    padding-top: 70px;
-    padding-bottom: 70px;
+    padding: 10% 0 10% 0;
 }
+
+
+
+
 
 /* конец общих стилевых решений */
 
+.overlay{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    transition: background-color 3s;
+    z-index: 5;
+    display: none;
+}
+
+.osnova{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-124%);
+    width: 60%;
+    height: 30%;
+    min-width: 210px;
+    background: rgba(34, 34, 34, 1);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    display: none;
+    z-index: 6;
+}
+.osnova p{
+    text-align: center;
+}
+.osnova p a{
+    color: white;
+}
+.osnova button{
+    width: 185px;
+    height: 17px;
+}
+.osnova button a{
+    font-size: 10px;
+    font-weight: 700;
+    line-height: 15.63px;
+}
+.osnova > div{
+    position: relative;
+    height: 40px;
+    width: 100%;
+}
+.osnova .butons1{
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+}
+.osnova > div > a{
+    position: absolute;
+    width: 79px;
+    height: 66px;
+}
+.osnova > div > img{
+    position: absolute;
+    right: 5%;
+    top: 12px;
+}
+.osnova > a img{
+    width: 100%;
+    height: 100%;
+    /* display: inline-block; */
+}
 
 /* хедер сайта */
 
@@ -95,12 +173,20 @@ header > a
     left: 0;
 }
 
+.header{
+    width: 60%;
+    margin-left: 10%;
+    display: flex;
+    justify-content: center;
+}
+
 header .butons
 {
+    width: 100%;
+    max-width: 720px;
     height: 120px;
     display: flex;
     flex-wrap: wrap;
-    width: 712px;
     justify-content: space-between;
     align-items: center;
     gap: 10px;
@@ -109,19 +195,20 @@ header .butons
 
 header button
 {
-    width: 350px;
+    width: 45%;
+    max-width: 320px;
     height: 52px;
 }
 
 header button:first-child
 {
-    max-width: 712px;
     width: 100%;
+    max-width: 720px;
 }
 
 header p
 {
-    font-size: 64px;
+    font-size: 30em;
     font-weight: 700;
     line-height: 100.03px;
     text-align: left;
@@ -145,6 +232,7 @@ header > img{
 }
 
 .opportunities{
+    width: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -167,17 +255,20 @@ header > img{
 
 .list{
     position: relative;
+    width: 100%;
 }
 
 .list > img{
     position: absolute;
     left: 96px;
-    transform: translate(0, -50px);
+    transform: translate(0, 50px);
 }
 
 .list > div:first-of-type > div{
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 50px;
 }
 
 .list h2{
@@ -190,17 +281,18 @@ header > img{
 
 .koroleva{
     text-align: center;
-    margin-left: -65px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 50px;
+    gap: 25px;
 }
 
 .leonardo{
     text-align: center;
-    display: grid;
-    gap: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 25px;
 }
 
 .list > div:last-child > div > div{
@@ -216,6 +308,8 @@ header > img{
 .list > div:last-child > div{
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 30px;
 }
 
 .list > div:last-child > div > div p{
@@ -236,9 +330,10 @@ header > img{
 
 .safetyPrecautions div{
     display: flex;
+    align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 25px;
+    gap: 60px;
 }
 
 .safetyPrecautions > div div{
@@ -258,9 +353,6 @@ header > img{
     line-height: 50.02px;
 }
 
-.safetyPrecautions > div div:nth-child(odd){
-    margin-right: 110px;
-}
 
 .safetyPrecautions img{
     position: absolute;
@@ -307,4 +399,332 @@ footer button{
     font-weight: 700;
     line-height: 62.52px;
     margin-right: 79px;
+}
+
+@media (min-width: 993px) and (max-width: 1500px){
+    footer button{
+        width: 377px;
+        height: 57px;
+        border-radius: 12px;
+        background-color: #D9D9D9;
+        font-size: 30px;
+        font-weight: 700;
+        line-height: 45px;
+        margin-right: 79px;
+        padding-top: 7px;
+    }
+}
+
+@media (max-width:1500px) {
+    .butterfly{
+        width: 56.05px;
+        height: auto;
+    }
+
+    h2{
+        font-size: 40px;
+        line-height: 37.51px;
+        margin-top: 30px;
+    }
+
+    .list h2{
+        margin: 0 0 0 100px;
+    }
+
+    .list > img{
+        left: 50px;
+    }
+
+    img{
+        max-height: 400px;
+    }
+}
+
+
+@media (min-width:1500px) {
+    .header{
+        width: 60%;
+        margin-left: 0;
+    }
+}
+
+
+@media (max-width:992px) {
+    h2{
+        font-size: 24px;
+        line-height: 33px;
+        margin-top: 30px;
+    }
+
+    .logo{
+        width: 140px;
+        height: 134px;
+    }
+    .logo img{
+        width: 100%;
+        height: 100%;
+    }
+    header{
+        width: 100%;
+        height: auto;
+    }
+    header .logo{
+        left: auto;
+        right: 0;
+    }
+    .burger_menu{
+        position: absolute;
+        top: 36px;
+        left: 44px;
+        display: grid;
+        gap: 3px;
+    }
+    .burger_menu > div{
+        width: 43px;
+        height: 9px;
+        background: rgba(217, 217, 217, 1);
+    }
+    .header{
+        display: none;
+    }
+
+    img{
+        max-width: 300px;
+    }
+
+
+    p{
+        font-size: 15px;
+        font-weight: 700;
+        line-height: 24px;      
+    }
+
+
+    .opportunities > div > p{
+        width: 40%;
+        font-size: 20px;
+        font-weight: 700;
+        line-height: 31.26px;
+    }
+
+    .opportunities > div{
+        justify-content: space-evenly;
+        align-items: normal;
+    }
+
+    .opportunities > div > div{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+    }
+
+    .opportunities > div > div p{
+        font-size: 24px;
+        line-height: 37.51px;
+        width: 50%;
+    }
+
+    .list{
+        width: 100%;
+    }
+
+
+    /* ----------------- позиция бабочек ------------------- */
+
+    .list > img{
+        left: 30px;
+        transform: translate(0, 0);
+    }
+
+    .list > div:last-child img{
+        right: 20px;
+        transform: translate(0, 30px);
+    }
+
+    .safetyPrecautions img{
+        transform: translate(0, -160px);
+    }
+
+            
+    /* ----------------------------------------------------------- */
+
+
+    .list h2{
+        margin: 0;
+    }
+
+    .list > div:last-child > div > div{
+        width: 265px;
+        height: 171px;
+    }
+
+    .koroleva{
+        gap: 30px;
+    }
+    .leonardo{
+        gap: 30px;
+    }
+
+
+
+    .safetyPrecautions > div div{
+        width: 268px;
+        height: 204px;
+    }
+
+    .safetyPrecautions p{
+        font-size: 15px;
+        line-height: 23.45px;    
+    }
+
+    .safetyPrecautions > div div:nth-child(2n+1){
+        margin-right: 65px;
+    }
+
+    footer{
+        padding: 10px 0 10px 0;
+    }
+    footer p{
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 25.01px;
+        text-align: center;
+    }
+    footer div{
+        width: 80%;
+        justify-content: space-evenly;
+    }
+    footer button{
+        width: 121px;
+        height: 33px;
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 21.88px;
+        text-align: center;        
+        margin-right: 10px;
+        padding: 7px 0 0 0;
+    }
+    .footer{
+        width: 60%;
+        justify-content: space-between;
+    }
+}
+
+
+@media (max-width: 768px){
+    .logo{
+        width: 79px;
+        height: 66px;
+    }
+
+    .burger_menu{
+        top: 17px;
+        left: 15px;
+    }
+    .burger_menu > div{
+        width: 21px;
+        height: 5px;
+    }
+
+    .opportunities > div > p{
+        font-size: 10px;
+        font-weight: 700;
+        line-height: 15.63px;
+    }
+
+    p{
+        font-size: 9px !important;
+        line-height: 15px !important;
+    }
+
+    h2{
+        font-size: 13px;
+        line-height: 22px;
+    }
+
+    img{
+        width: 131px;
+        height: 131px;
+    }
+
+    /* ----------------- позиция бабочек ------------------- */
+
+    .butterfly{
+        height: auto;
+        width: 40px;
+    }
+    header img{
+        right: 0;
+        top: 70px;
+    }
+    .list > img{
+        left: 30px;
+        transform: translate(0, 0);
+    }
+    .list > div:last-child img{
+        right: 20px;
+        transform: translate(0, 30px);
+    }
+    .safetyPrecautions img{
+        transform: translate(0, -160px);
+    }
+
+
+    /* ----------------------------------------------------------- */
+
+    .list > div:last-child > div > div{
+        width: 139px;
+        height: 119px;
+        border-radius: 14px;
+    }
+
+    .safetyPrecautions > div div{
+        width: 134px;
+        height: 103px;
+        border-radius: 14px;
+    }
+
+    .safetyPrecautions > div div > p{
+        font-size: 8px !important;
+        line-height: 11px !important;
+    }
+
+    .safetyPrecautions > div div:nth-child(2n+1){
+        margin: 0;
+    }
+
+    .list h2{
+        padding: 30px 0 25px 0;
+        line-height: 21px;
+    }
+
+    .safetyPrecautions h2{
+        padding: 30px 0 25px 0;
+        margin: 0;
+    }
+
+    footer{
+        padding: 10px 0 10px 0;
+    }
+    footer p{
+        font-size: 10px;
+        font-weight: 700;
+        line-height: 15.63px;
+        text-align: center;
+    }
+    footer div{
+        width: 80%;
+        justify-content: space-evenly;
+    }
+    footer button{
+        width: 98px;
+        height: 19px;
+        font-size: 10px;
+        font-weight: 700;
+        line-height: 20px;
+        text-align: left;
+        margin-right: 10px;
+        padding:  0;
+    }
 }
