--- a/4Page/style.css
+++ b/4Page/style.css
@@ -106,6 +106,7 @@ h2{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding: 15px;
     align-items: center;
     display: none;
     z-index: 6;
@@ -148,6 +149,8 @@ h2{
     position: absolute;
     right: 5%;
     top: 12px;
+    width: 15px;
+
 }
 .osnova > a img{
     width: 100%;
@@ -645,7 +648,7 @@ footer button{
 
     img{
         width: 131px;
-        height: 131px;
+        height: auto;
     }
 
     /* ----------------- позиция бабочек ------------------- */
@@ -726,5 +729,30 @@ footer button{
         text-align: left;
         margin-right: 10px;
         padding:  0;
+    }
+}
+
+@media (min-width:2500px) {
+    .opportunities > div{
+        justify-content: center;
+        gap: 200px;
+    }
+
+    .list > div:first-of-type > div{
+        justify-content: center;
+        gap: 200px;
+    }
+
+    .list > div:last-child > div{
+        justify-content: center;
+        gap: 200px;
+    }
+
+    h2{
+        padding: 250px 0 250px 0;
+    }
+
+    .safetyPrecautions img{
+        left: 0;
     }
 }
