--- a/secondPage/style.css
+++ b/secondPage/style.css
@@ -138,6 +138,7 @@ h2{
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    padding: 15px;
     display: none;
     z-index: 6;
 }
